<resources>
    <string name="facebook_app_id">1974447829483074</string>
    <string name="fb_login_protocol_scheme">fb1974447829483074</string>
    <string name="app_name">Trailaider</string>
    <string name="f_name">First Name</string>
    <string name="lst_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="create_new_account">Create New Account</string>
    <string name="an_existing_account">An Existing Account&#160;</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="help">Help</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="submit">Submit</string>
    <string name="no_internet">Network error, please connect to internet.</string>
    <string name="email_mobile">Email/Mobile Number</string>
    <string name="enter_otp">Enter Verification Code</string>
    <string name="units">Units-Imperial/Metric</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dob">D.O.B</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_firstname">Please enter first name.</string>
    <string name="enter_email">Please enter email.</string>
    <string name="enter_confrim_pass">Please enter confirm password.</string>
    <string name="password_length">Password lenght should be minimum 6 chars.</string>
    <string name="password_validation">Password should contains at least one capital latter and one special character.</string>
    <string name="enter_mobile_number">Please enter mobile number.</string>
    <string name="enter_city">Please enter city.</string>
    <string name="enter_pincode">Please enter pincode.</string>
    <string name="password_not_match">Password not matching.</string>
    <string name="enter_email_valid">Please enter a valid email.</string>
    <string name="enter_valid_mobile_number">Please enter a valid mobile number.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="select_unit">Please select unit.</string>
    <string name="enter_height">Please ente height.</string>
    <string name="enter_weight">Please enter weight.</string>
    <string name="select_dob">Please select date of birth.</string>
    <string name="camera">Camera</string>
    <string name="enter_email_mobile">Please enter email or mobile number.</string>
    <string name="gallery">Gallery</string>
    <string name="server_error">Something went wrong, please try again later.</string>
    <string name="myprofile">My Profile</string>
    <string name="my_points">My Points</string>
    <string name="myrank">My Rank</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search_review">SEARCH YOUR REVIEWS</string>
    <string name="search_trek">SEARCH YOUR TREK</string>
    <string name="submit_trek">SUBMIT TREK</string>
    <string name="trek_name">TREK NAME</string>
    <string name="trek_type">TREK TYPE</string>
    <string name="trek_duration">TREK DURATION</string>
    <string name="trek_height">TREK HEIGHT</string>
    <string name="upload_gps_loc">UPLOAD GPS LOCATION</string>
    <string name="solo">Solo</string>
    <string name="with_friends">With Friends</string>
    <string name="company">Company</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="done">Done</string>
    <string name="select_type">Please select trek type.</string>
    <string name="gender">Gender</string>
    <string name="enter_trek_name">Please enter trek name.</string>
    <string name="select_trek_type">Please select trek type.</string>
    <string name="enter_trek_duration">Please select trek duration.</string>
    <string name="enter_trek_height">Please enter trek height.</string>
    <string name="submit_review">SUBMIT REVIEW</string>
    <string name="product_trek_gear">Product/Gear/Trek Name</string>
    <string name="write_review">WRITE REVIEW</string>
    <string name="url_paste">PASTE A URL</string>
    <string name="enter_review_name">Please enter name.</string>
    <string name="enter_review_desc">Please enter review description.</string>
    <string name="enter_url">Please enter a url.</string>
    <string name="view_profile">View Profile</string>
    <string name="about_me">About Me</string>
    <string name="notification">Notification</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="friends_tagging">Friends Tagging</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_gender">Please select gender.</string>
    <string name="pending">Pending</string>
    <string name="aproved">Approved</string>
    <string name="service_not_available">Service not available.</string>
    <string name="invalid_lat_long_used">Invalid latitude logitude.</string>
    <string name="no_address_found">Address not found</string>
    <string name="location_not_match">Trek not matching with your current location.</string>
    <string name="error_location">Something went wrong, Please check you GPS settings.</string>
    <string name="trek_added_success">Trek added successfully.</string>
    <string name="select_mage">Please select at least one image.</string>
    <string name="message">Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="generate_course">GENERATE COURSE</string>
    <string name="generate_new_course">GENERATE A NEW COURSE</string>
    <string name="your_info">YOUR INFO</string>
    <string name="age">AGE</string>
    <string name="height_caps">HEIGHT</string>
    <string name="weight_caps">WEIGHT</string>
    <string name="trek_info">TREK INFO</string>
    <string name="duration">DURATION</string>
    <string name="course_duration">COURSE DURATION</string>
    <string name="_3_weeks">3 WEEKS</string>
    <string name="_6_weeks">6 WEEKS</string>
    <string name="_9_weeks">9 WEEKS</string>
    <string name="enter_age">Please enter age.</string>
    <string name="my_course">My Course</string>
    <string name="food_to_eat">Food to eat</string>
    <string name="exercise_to_do">Exercise to do</string>
    <string name="say_no">Say no to</string>
    <string name="submit_rating">Please submit any rating.</string>
    <string name="send">Send</string>
</resources>