<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_15dp"
    android:paddingRight="@dimen/_15dp"
    tools:context="com.trailaider.app.ui.activity.signup.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_sam_192" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_fname"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_30dp"
            android:hint="@string/f_name"
            android:inputType="textPersonName|textCapSentences"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_lastname"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/lst_name"
            android:inputType="textPersonName|textCapSentences"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_email"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_pass"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_confirm_pass"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_phone"
            android:maxLength="10"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:digits="1234567890"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_city"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/city"
            android:inputType="textPersonName|textCapSentences"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.EditTextReguler
            android:id="@+id/edit_text_pincode"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/_5dp"
            android:digits="1234567890"
            android:hint="@string/pin_code"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:maxLines="1" />

        <com.trailaider.app.ui.custom.ButtonReguler
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_button"
            android:padding="@dimen/_5dp"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="horizontal">

            <com.trailaider.app.ui.custom.TextViewReguler
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_existing_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sp" />

            <com.trailaider.app.ui.custom.TextViewReguler
                android:id="@+id/textView_sigin_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/_15sp" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>
