<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_15dp"
    android:paddingRight="@dimen/_15dp"
    tools:context="com.trailaider.app.ui.activity.siginin.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/layout_form"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_sam_192" />
        <LinearLayout
            android:id="@+id/layout_form"
            android:layout_above="@+id/textView_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.trailaider.app.ui.custom.EditTextReguler
                android:id="@+id/edit_text_email"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_30dp"
                android:hint="@string/email_mobile"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <com.trailaider.app.ui.custom.EditTextReguler
                android:id="@+id/edit_text_pass"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/_15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />



            <com.trailaider.app.ui.custom.ButtonReguler
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/bg_button"
                android:padding="@dimen/_5dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20dp">

                <com.trailaider.app.ui.custom.TextViewReguler
                    android:id="@+id/textView_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sp" />

                <com.trailaider.app.ui.custom.TextViewReguler
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="false"
                    android:text="@string/help"
                    android:visibility="gone"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.trailaider.app.ui.custom.ButtonReguler
                    android:id="@+id/button_fb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:padding="@dimen/_5dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sp" />

                <com.trailaider.app.ui.custom.ButtonReguler
                    android:id="@+id/button_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:padding="@dimen/_5dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sp" />
            </LinearLayout>
        </LinearLayout>

        <com.trailaider.app.ui.custom.TextViewReguler
            android:id="@+id/textView_create_account"
            android:layout_marginBottom="@dimen/_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_15dp"
            android:text="@string/create_new_account"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/_15sp" />
    </RelativeLayout>
</ScrollView>
